# literate-template

./: .gitignore  _config.yml  _toc.yml  cookiecutter.json  dodo.py  requirements.txt
.github/workflows/: python-package.yml  test.yml
{{ cookiecutter.name }}/: .gitignore  contributing.md  dodo.py  pyproject.toml  requirements-dev.txt  requirements.txt  sanitize.cfg  setup.cfg
{{ cookiecutter.name }}/.github/workflows/: docs.yml  python-package.yml
{{ cookiecutter.name }}/binder/: environment.yml  postBuild
{{ cookiecutter.name }}/src/{{ cookiecutter.py_module }}/: __init__.py  __main__.py  readme.md  setup.cfg
{{ cookiecutter.name }}/src/{{ cookiecutter.py_module }}/js/: package.json  tsconfig.json
{{ cookiecutter.name }}/src/{{ cookiecutter.py_module }}/js/src/: index.ts  plugin.ts
{{ cookiecutter.name }}/src/{{ cookiecutter.py_module }}/{{ cookiecutter.js_module }}/: package.json
{{ cookiecutter.name }}/src/{{ cookiecutter.py_module }}/{{ cookiecutter.js_module }}/src/: plugin.ts
{{cookiecutter.name}}/: __init__.py  __main__.py  readme.md
{{cookiecutter.name}}/binder/: environment.yml
