# {{ cookiecutter.py_module }} project data

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

# https://flit.readthedocs.io
[tool.flit.metadata]
module = "{{cookiecutter.name}}"
author = "{{cookiecutter.author}}"
author-email = "{{ cookiecutter.author }}@example.com"
home-page = "http://github.com/{{cookiecutter.author}}/{{cookiecutter.name}}"
classifiers = ["License :: OSI Approved :: BSD License"]
requires=["typer"]

[tool.flit.metadata.requires-extra]
test = ["pytest", "nbval"]
doc = ["jupyter-book", "pyppeteer",  "doit"]

[tool.pytest.ini_options]
addopts = "--nbval --sanitize-with sanitize.cfg -p no:warnings"
