[metadata]
name = {{ cookiecutter.py_module }}
description = {{ cookiecutter.short_description }}
long_description = file: readme.md
long_description_content_type = text/markdown
url = {{ cookiecutter.repository }}
author = {{ cookiecutter.author }}
license = BSD-3-Clause
keywords =
    Interactive
    Shell
    Web
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    jupyterlab ==3.0.0rc5
package_dir =
    = src
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where =
    src
